--- a/package.json
+++ b/package.json
@@ -8,20 +8,36 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "packageManager": "pnpm@9.5.0",
   "dependencies": {
+    "@progress/kendo-cli": "^1.8.0",
+    "@progress/kendo-licensing": "^1.5.1",
+    "@progress/kendo-react-animation": "^10.0.0",
+    "@progress/kendo-react-buttons": "^10.0.0",
+    "@progress/kendo-react-common": "^10.0.0",
+    "@progress/kendo-react-dropdowns": "^10.0.0",
+    "@progress/kendo-react-inputs": "^10.0.0",
+    "@progress/kendo-react-intl": "^10.0.0",
+    "@progress/kendo-react-layout": "^10.0.0",
+    "@progress/kendo-react-listview": "^10.0.0",
+    "@progress/kendo-react-treeview": "^10.0.0",
+    "@progress/kendo-theme-default": "^10.4.0",
+    "markdown-to-text": "^0.1.1",
+    "next": "15.2.2",
+    "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.2.2"
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4.0.15",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.2.2",
-    "@eslint/eslintrc": "^3"
+    "tailwindcss": "^4.0.15",
+    "typescript": "^5"
   }
 }
